# QML-exercise

./: .gitignore  README.md
2021-06-18-control/qt-control/: CMakeLists.txt  main.qml
2021-06-18-move-square/MoveRect/: CMakeLists.txt  main.qml
2021-06-20-application-form/Application-Form/: CMakeLists.txt  main.qml
2021-06-20-stack-exercise/stack-exercise/: CMakeLists.txt  Page3Form.ui.qml  main.qml
2021-06-21-component-exercise/component-exercise/: Genie.qml  backend.cpp  backend.h  main.cpp  main.qml
2021-06-21-cpp-integration-2/cpp-integration-2/: cat.cpp  cat.h  cpp-integration-2.pro  main.cpp  main.qml
2021-06-21-cpp-integration/cpp-integration/: CMakeLists.txt  cat.cpp  cat.h  main.cpp  main.qml
2021-06-21-project-starter/project-starter/: DirCmdListComponent.qml  ProjectDetailDAO.qml
2021-06-21-text-editor-2/text-editor/: backend.cpp  backend.h  main.qml  qml.qrc
2021-06-21-text-editor-3/: Makefile  Makefile.Debug  Makefile.Release
